--- a/spring_crud_sakuraihojo/src/main/resources/messages.properties
+++ b/spring_crud_sakuraihojo/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 typeMismatch.java.lang.Integer={0}は整数値で入力してください。
 typeMismatch.java.util.Date=正しい日付を入力してください。
+empId=社員ID
 empPass=パスワード
 empName=社員名
 address=住所
